--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -86,7 +86,7 @@ div[class^="border"]{
 	h1{
 		margin: 0;
 		font-family: 'Montserrat', sans-serif;
-		font-size: 20vh;
+		font-size: 10vw;
 		position: absolute;
 		font-weight: bold;
 		top: 0;
