--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -79,4 +79,8 @@ div[class^="border"] {
   min-height: 100vh;
   background-color: white; }
 
+@media (max-width: 940px) {
+  canvas {
+    display: none; } }
+
 /*# sourceMappingURL=site.css.map */
