--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -56,7 +56,9 @@ html
 				h1 Hi, I'm
 					span  Ferre
 					<br> Digital Creative</br>
+				h2 a jack of all trades with a liking for Design &amp; Front-end Development
 		section.content
+			
 				//- BODY
 				
 
