--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -8,7 +8,8 @@ img {
 .fancy {
   position: fixed;
   height: 100vh;
-  width: 100vw; }
+  width: 100vw;
+  z-index: -9999; }
 
 .background {
   position: absolute;
@@ -58,25 +59,29 @@ div[class^="border"] {
   color: white; }
 
 .brand {
-  text-align: center; }
+  text-align: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 80vw;
+  height: 50vh;
+  text-shadow: rgba(0, 0, 0, 0.5) 1px 1px 1px; }
   .brand h1 {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     font-size: 10vw;
-    position: absolute;
-    font-weight: bold;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 80vw;
-    height: 50vh; }
+    font-weight: bold; }
+  .brand h2 {
+    margin: 25px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100; }
   .brand span {
     color: #85d62d; }
 
 .content {
-  min-height: 100vh;
   background-color: white; }
 
 @media (max-width: 940px) {
