--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -18,6 +18,7 @@ body{
 	position: fixed;
 	height: 100vh;
 	width: 100vw;
+	z-index: -9999;
 }
 
 .background{
@@ -82,20 +83,28 @@ div[class^="border"]{
 .brand{
 	text-align: center;
 	//position: relative;
-	
-	h1{
-		margin: 0;
-		font-family: 'Montserrat', sans-serif;
-		font-size: 10vw;
-		position: absolute;
-		font-weight: bold;
-		top: 0;
+	position: absolute;
+	top: 0;
 	    bottom: 0;
 	    left: 0;
 	    right: 0;
 	    margin: auto;
 	    width: 80vw;
 	    height: 50vh;
+	    text-shadow: rgba(0,0,0,0.5) 1px 1px 1px;
+
+	h1{
+		margin: 0;
+		font-family: 'Montserrat', sans-serif;
+		font-size: 10vw;
+		font-weight: bold;
+		
+	}
+
+	h2{
+		margin: $theme_gutter;
+		font-family: 'Montserrat', sans-serif;
+		font-weight: 100;
 	}
 
 	span{
@@ -104,7 +113,7 @@ div[class^="border"]{
 }
 
 .content{
-	min-height: 100vh;
+	
 	background-color: white;
 }
 
