--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -14,7 +14,9 @@ img {
 .background {
   position: absolute;
   top: 0;
-  background-image: url("https://static.pexels.com/photos/167698/pexels-photo-167698.jpeg");
+  height: 100%;
+  width: 100%;
+  background-image: url("../images/background.jpg");
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
@@ -31,48 +33,29 @@ div[class^="border"] {
   background-color: white;
   z-index: 9999; }
 
-.border-top, .border-bottom {
-  left: 0;
-  height: 25px;
-  width: 100%; }
-
-.border-top {
-  top: 0; }
-
-.border-bottom {
-  bottom: 0; }
-
-.border-left, .border-right {
-  top: 0;
-  height: 100%;
-  width: 25px; }
-
-.border-left {
-  left: 0; }
-
-.border-right {
-  right: 0; }
-
 .intro {
+  z-index: -1;
   height: 100vh;
   position: relative;
   color: white; }
+  .intro .brand {
+    text-align: center;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    width: 80vw;
+    height: 50vh; }
+    .intro .brand h1 {
+      font-size: 10vw; }
 
 .brand {
-  text-align: center;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 80vw;
-  height: 50vh;
   text-shadow: rgba(0, 0, 0, 0.5) 1px 1px 1px; }
   .brand h1 {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    font-size: 10vw;
     font-weight: bold; }
   .brand h2 {
     margin: 25px;
@@ -82,7 +65,9 @@ div[class^="border"] {
     color: #85d62d; }
 
 .content {
-  background-color: white; }
+  min-height: 100vh;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.8) 0px 0px 11px -2px; }
 
 @media (max-width: 940px) {
   canvas {
