--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -3,10 +3,11 @@ extends ../layouts/default
 	
 mixin project(project)
 		a(href="/project/" + project.slug)
-			.pure-u-lg-1-3.item
+			.pure-u-lg-1-4.item
 				img(src=project.heroImage.url)
 
 
 block content
 	.grid
-		
+		each project in data.projects.results
+			+project(project)
