--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -69,6 +69,18 @@ div[class^="border"] {
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.8) 0px 0px 11px -2px; }
 
+.item {
+  margin: 5px; }
+
+.choose {
+  text-align: center; }
+  .choose h3 {
+    padding: 15px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2.5em;
+    text-transform: uppercase;
+    font-weight: bold; }
+
 @media (max-width: 940px) {
   canvas {
     display: none; } }
