--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -28,10 +28,10 @@ block content
 			h3 Work 
 			.button-group.filter-button-group
 				button(data-filter="*") Show all
-				button(data-filter="design") Design
-				button(data-filter="development") Development
-				button(data-filter="video") Video
-				button(data-filter="project") Project
+				button(data-filter=".design") design
+				button(data-filter=".development") development
+				button(data-filter=".video") video
+				button(data-filter=".project") project
 
 		.grid
 			each project in data.projects.results
