--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -74,7 +74,7 @@ html
 
 		//- Customise which Bootstrap javascript files are served by including
 
-		script(src="//npmcdn.com/isotope-layout@3/dist/isotope.pkgd.js")
+		script(src="//unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js")
 
 		//- The KeystoneJS Content Editor provides support for ks-editable data attributes,
 		//- which generate links to edit content for users who can access Keystone
