--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -27,7 +27,7 @@ block content
 		div.choose
 			h3 Work 
 			.button-group.filter-button-group
-				button(data-filter="*") Show all
+				button(data-filter="*") All
 				button(data-filter=".design") design
 				button(data-filter=".development") development
 				button(data-filter=".video") video
