--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -107,14 +107,33 @@ div[class^="border"]{
 	text-align: center;
 
 	h3{
-		padding: 15px;
+		padding: 30px;
 		font-family: 'Montserrat', sans-serif;
 		font-size: 2.5em;
 		text-transform: uppercase;
 		font-weight: bold;
+		color: $theme-color;
 	}
 }
 
+.button-group{
+	padding: 0 0 30px 0;
+}
+
+button{
+	background-color: transparent;
+	text-transform: uppercase;
+	padding: 5px;
+	border: 2px solid $theme_color;
+	color: $theme-color;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 100;
+
+	&:hover, &.is-checked{
+		color: white;
+		background-color: $theme_color;
+	}
+}
 
 @media (max-width: 940px){
 	canvas{
