--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -14,6 +14,10 @@ body{
 	
 }
 
+strong{
+	font-weight: inherit;
+}
+
 .fancy{
 	position: fixed;
 	height: 100vh;
@@ -95,9 +99,47 @@ div[class^="border"]{
 .content{
 	min-height: 100vh;
 	background-color: white;
+	padding: 15px;
 	box-shadow: rgba(0,0,0,0.8) 0px 0px 11px -2px
 }
 
+.about{
+	text-align: center;
+	margin: 0 auto;
+	display: block;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
+
+	p{
+		margin-top: 15px;
+		line-height: 30px;
+	}
+
+	&:after{
+
+		margin: 30px auto 0 auto;
+		display: block;
+		content: "";
+		background-color: lightgrey;
+		opacity: .5;
+		width: 40%;
+		height: 2px;
+	}
+}
+
+.me{
+	margin: 15px auto;
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	background-image: url('../images/me.jpg');
+	background-size: cover;
+
+}
+
+.quote{
+	font-style: italic;
+}
 
 .item{
 	margin: 5px;
@@ -112,7 +154,7 @@ div[class^="border"]{
 		font-size: 2.5em;
 		text-transform: uppercase;
 		font-weight: bold;
-		color: $theme-color;
+		color: $theme_color;
 	}
 }
 
@@ -125,7 +167,7 @@ button{
 	text-transform: uppercase;
 	padding: 5px;
 	border: 2px solid $theme_color;
-	color: $theme-color;
+	color: $theme_color;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 100;
 
@@ -134,6 +176,73 @@ button{
 		background-color: $theme_color;
 	}
 }
+
+
+
+// PROJECT PAGE =======================
+
+.single-project{
+	font-family: 'Montserrat', sans-serif;
+	padding: 30px;
+
+	.back{
+		text-transform: uppercase;
+		font-weight: 100;
+		color: lightgrey;
+
+		&:hover{
+			color: $theme_color;
+		}
+	}
+
+	.project-title{
+		font-weight: bold;
+		text-transform: uppercase;
+		color: $theme_color;
+
+		&:after{
+			margin: 30px 0 0 0;
+			display: block;
+			content: "";
+			background-color: lightgrey;
+			opacity: .5;
+			width: 40%;
+			height: 2px;
+		}
+	}
+
+	.project-info{
+		padding-right: 15px;
+
+		h1{
+			font-weight: 100;
+			font-family: 'Open Sans', sans-serif;
+		}
+
+		p, h6, ol{
+			font-family: 'Open Sans', sans-serif;
+			line-height: 25px;
+			margin: 15px 0;
+			font-weight: 100;
+		}
+
+		iframe{
+			width: 100%;
+		}
+		img{
+			max-width: 100%;
+			height: auto;
+		}
+		a{
+			color: $theme_color;
+		}
+
+		em{
+			font-style: italic;
+		}
+	}
+}
+
 
 @media (max-width: 940px){
 	canvas{
