--- a/templates/views/project.pug
+++ b/templates/views/project.pug
@@ -1,11 +1,14 @@
 extends ../layouts/default
 
-mixin project(project)
-	p= data.project.title
 
 block content
-	h1 
-		a(href="/") #{'<'} Go back
-	h1 welkom
-	p= data.project.content.extended
-	p= result
+	section.single-project
+			span.back 
+				a(href="/") #{'<'} Go back
+			.project-details.pure-g
+				h1.project-title.pure-u-1-1= data.project.title
+				.pure-u-lg-1-2.pure-u-md-1-2.pure-u-sm-1.pure-u-1-1
+					.project-info!= data.project.content.brief
+				.pure-u-lg-1-2.pure-u-md-1-2.pure-u-sm-1.pure-u-1-1
+					.project-info!= data.project.content.extended
+	
