--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -125,7 +125,8 @@ button {
   border: 2px solid #85d62d;
   color: #85d62d;
   font-family: 'Montserrat', sans-serif;
-  font-weight: 100; }
+  font-weight: 100;
+  margin: 0 5px; }
   button:hover, button.is-checked {
     color: white;
     background-color: #85d62d; }
