--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -30,6 +30,7 @@ block content
 			p Hello, I'm Ferre Lambert and I'm an Antwerp-based 'Digital Creative'. Going through life with a smile, I like to creatively solve problems with the tools at hand, both online as offline.
 			p Do take a look at my work and do not hesitate to ask if what you wish, isn't displayed or what TV series I'm currently recommending.
 			p.quote "Adventure is out there!"
+			a(class="cv" href="files/LambertFerre_CV.pdf" target="_blank") Check my resume (Dutch)
 		div.choose
 			h3 Work 
 			.button-group.filter-button-group
