--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -137,6 +137,19 @@ div[class^="border"]{
 
 }
 
+.cv{
+	display: inline-block;
+	margin: 15px 0;
+	padding: 5px;
+	border: 2px solid $theme_color;
+	color: $theme_color;
+
+	&:hover{
+		background-color: $theme_color;
+		color: white;
+	}
+}
+
 .quote{
 	font-style: italic;
 }
