--- a/public/styles/site.scss
+++ b/public/styles/site.scss
@@ -191,7 +191,45 @@ button{
 	}
 }
 
+footer{
+	background-color: whitesmoke;
+	padding: 30px;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 100;
+	line-height: 32px;
 
+	&:before{
+		content: "";
+		width: 100%;
+		background-color: red;
+		height: 5px;
+	}
+
+	a{
+		color: lightgrey;
+
+		&:hover{
+			color: $theme_color;
+		}
+	}
+
+	.right a{
+		font-size: 2.2em;
+		margin: 0 5px;	
+	}
+}
+
+.left{
+	float: left;
+}
+.right{
+	float: right;
+}
+
+.clearfix {
+  overflow: auto;
+  zoom: 1;
+}
 
 // PROJECT PAGE =======================
 
