--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -22,6 +22,8 @@ html
 		link(href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,900", rel="stylesheet")
 		link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700", rel="stylesheet")
 
+		script(src="https://use.fontawesome.com/4e23d5adff.js")
+
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
 			link(href="/keystone/styles/content/editor.min.css", rel="stylesheet")
@@ -63,7 +65,17 @@ html
 
 
 		//- FOOTER
-		
+		footer.clearfix
+			div.left &copy; 2017 Ferre Lambert &middot; 
+				a(href="mailto:hello@ferrelambert.be")
+					i(class="fa fa-envelope-o" aria-hidden="true")
+			div.right
+				a(href="https://www.linkedin.com/")
+					i(class="fa fa-linkedin" aria-hidden="true")
+				a(href="https://www.instagram.com/ferrrrre/")
+					i(class="fa fa-instagram" aria-hidden="true")
+				a(href="https://www.twitter.com/Ferre_")
+					i(class="fa fa-twitter" aria-hidden="true")
 
 
 		//- JAVASCRIPT
