--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -70,11 +70,11 @@ html
 				a(href="mailto:hello@ferrelambert.be")
 					i(class="fa fa-envelope-o" aria-hidden="true")
 			div.right
-				a(href="https://www.linkedin.com/")
+				a(href="https://www.linkedin.com/in/ferre-lambert-03087257/")
 					i(class="fa fa-linkedin" aria-hidden="true")
-				a(href="https://www.instagram.com/ferrrrre/")
+				a(href="https://www.instagram.com/ishetnogFerre/")
 					i(class="fa fa-instagram" aria-hidden="true")
-				a(href="https://www.twitter.com/Ferre_")
+				a(href="https://www.twitter.com/ishetnogFerre")
 					i(class="fa fa-twitter" aria-hidden="true")
 
 
