added GH and CP

--- a/templates/layouts/default.pug
+++ b/templates/layouts/default.pug
@@ -76,6 +76,10 @@ html
 					i(class="fa fa-instagram" aria-hidden="true")
 				a(href="https://www.twitter.com/ishetnogFerre")
 					i(class="fa fa-twitter" aria-hidden="true")
+				a(href="https://github.com/Ferrrrrre")
+					i(class="fa fa-github" aria-hidden="true")
+				a(href="https://codepen.io/Ferrrrrre/")
+					i(class="fa fa-codepen" aria-hidden="true")
 
 
 		//- JAVASCRIPT
