--- a/templates/views/index.pug
+++ b/templates/views/index.pug
@@ -13,33 +13,91 @@ mixin project(project)
 
 
 block content
-	.fancy
-		canvas#pixies
-		.background
 
-	section.intro
-		.brand
+	section.section.section__intro.font--white
+		.background.background__intro
+		.brand.center
 			h1 Hi, I'm
-				span  Ferre
+				span.font--theme  Ferre
 				<br> Digital Creative</br>
 			h2 a jack of all trades with a liking for Design &amp; Front-end Development
 
-	section.content
-		div.about.pure-u-lg-1-3.pure-u-md-1-2.pure-u-sm-1-1.pure-u-1-1
-			div.me
-			p Hello, I'm Ferre Lambert and I'm an Antwerp-based 'Digital Creative'. Going through life with a smile, I like to creatively solve problems with the tools at hand, both online as offline.
-			p Do take a look at my work and do not hesitate to ask if what you wish, isn't displayed or what TV series I'm currently recommending.
-			p.quote "Adventure is out there!"
-			a(class="cv" href="files/LambertFerre_CV.pdf" target="_blank") Check my resume (Dutch)
+	section.section.section__about
+		div.pure-g
+			div.about__me.pure-u-lg-1-3.pure-u-md-1-2.pure-u-sm-1-2.pure-u-xs-1-2.pure-u-1-1.eqHeight
+				
+			div.about__bio.pure-u-lg-1-3.pure-u-md-1-2.pure-u-sm-1-2.pure-u-xs-1-2.pure-u-1-1.eqHeight
+				.about__bio__inner
+					p 
+						span.greeting Hello, <br>
+						| I'm Ferre Lambert and I'm an Antwerp-based 'Digital Creative'. Going through life with a smile, I like to creatively solve problems with the tools at hand, both online as offline.
+					p Do take a look at my work and do not hesitate to ask if what you wish, isn't displayed or what TV series I'm currently recommending.
+					p.quote "Adventure is out there!"
+					a(class="button" href="files/LambertFerre_CV.pdf" target="_blank") Check my resume (Dutch)
+
+	section.section.section__skills.font--white
+		.background.background__skills
+		.skills__inner
+			h3.title Skills
+			div.skills__lists
+				div.known.skills__list
+					h4 Known tech
+					ul
+						li Adobe Photoshop, Illustrator
+						li Adobe Première Pro, After Effects
+						li HTML
+						li CSS
+						li Javascript, jQuery 
+						li PHP
+						li SASS/LESS
+						li Laravel
+						li Wordpress
+						li Node.js, npm
+						li Bootstrap, PureCSS
+						li mySQL
+						li Git(Hub)
+						li Mailchimp
+						li SCRUM
+						li ...
+
+				div.experiment.skills__list
+					h4 Experimented with
+					ul
+						li Vue.js, AngularJS
+						li KeystoneJS
+						li PUG, Twig, Jade
+						li BEM, SMACSS
+						li Foundation
+						li MongoDB
+						li Backbone.js
+						li Gulp, Grunt
+						li Three.js
+						li Socket.io
+						li Drupal
+						li ...				
+
+				div.heardof.skills__list
+					h4 Heard of
+					ul
+						li ReactJS
+						li Kirby CMS, Craft CMS
+						li Webpack
+						li ECMAScript
+						li Ionic
+						li DevOps
+						li ...
+
+	section.section.section__work
 		div.choose
 			h3 Work 
-			.button-group.filter-button-group
-				button(data-filter="*") All
-				button(data-filter=".design") design
-				button(data-filter=".development") development
-				button(data-filter=".video") video
-				button(data-filter=".project") project
+			.button-group.filter-button-group.center
+				button(class="button" data-filter="*") All
+				button(class="button" data-filter=".design") design
+				button(class="button" data-filter=".development") development
+				button(class="button" data-filter=".video") video
+				button(class="button" data-filter=".project") project
 
 		.grid
 			each project in data.projects.results
 				+project(project)
+
